--- a/gk.bib
+++ b/gk.bib
@@ -24350,26 +24350,29 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 
 
 @article{cortes1995support,
-  title={Support-vector networks},
-  author={Cortes, Corinna and Vapnik, Vladimir},
-  journal={Machine learning},
-  volume={20},
-  number={3},
-  pages={273--297},
-  year={1995},
-  publisher={Springer}
+  title =        {Support-vector networks},
+  author =       {Cortes, Corinna and Vapnik, Vladimir},
+  journal =      {Machine learning},
+  volume =       {20},
+  number =       {3},
+  pages =        {273--297},
+  year =         {1995},
+  publisher =    {Springer}
 }
 
 @article{meyer2004support,
-  title={Support vector machines: The interface to libsvm in package e1071},
-  author={Meyer, David},
-  year={2004},
-  publisher={Citeseer}
+  title =        {Support vector machines: The interface to libsvm in
+                  package e1071},
+  author =       {Meyer, David},
+  year =         {2004},
+  publisher =    {Citeseer}
 }
 
 @article{roberts2015experiencing,
-  title={Experiencing Censorship Emboldens Internet Users and Decreases Government Support in China},
-  author={Roberts, M},
-  journal={Unpublished Working Paper, URL http://www. margaretroberts. net/wp-content/uploads/2015/07/fear. pdf},
-  year={2015}
+  title =        {Experiencing Censorship Emboldens Internet Users and
+                  Decreases Government Support in China},
+  author =       {Roberts, M},
+  journal =      {Unpublished Working Paper, URL
+                  http://www.margaretroberts.net/wp-content/uploads/2015/07/fear.pdf},
+  year =         {2015}
 }
