--- a/gk.bib
+++ b/gk.bib
@@ -24376,3 +24376,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
                   http://www.margaretroberts.net/wp-content/uploads/2015/07/fear.pdf},
   year =         {2015}
 }
+@Article{BarLiaXu15,
+  author =       {Baranovsky, Alla and Liaqat, Asad and Xu, Alice},
+  title =        {Conditional Cash Transfers and Electoral Behavior: A
+                  Reassessment of a Randomized Experiment in Mexico},
+  journal =      {Harvard Dataverse},
+  year =         2015,
+  note =         {http://dx.doi.org/10.7910/DVN/CUPEQH},
+  annote =       {[UNF:6:b1WOJ5yaQSMT0FREUvkW3Q==]}
+}
+
