added genmatch jss paper

--- a/gk.bib
+++ b/gk.bib
@@ -24386,3 +24386,11 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   annote =       {[UNF:6:b1WOJ5yaQSMT0FREUvkW3Q==]}
 }
 
+@article{sekhon2011,
+  title={Multivariate and Propensity Score Matching Software with Automated Balance Optimization: The Matching Package for R},
+  author={Sekhon, Jasjeet S},
+  journal={Journal of Statistical Software},
+  year={2011},
+  volume = {42},
+  issue = {7}
+}
