updated genmatch id

--- a/gk.bib
+++ b/gk.bib
@@ -24386,7 +24386,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   annote =       {[UNF:6:b1WOJ5yaQSMT0FREUvkW3Q==]}
 }
 
-@article{sekhon2011,
+@article{Sekhon11,
   title={Multivariate and Propensity Score Matching Software with Automated Balance Optimization: The Matching Package for R},
   author={Sekhon, Jasjeet S},
   journal={Journal of Statistical Software},
