--- a/gk.bib
+++ b/gk.bib
@@ -8243,7 +8243,7 @@ pages={706-719}
 	year= 1995
 }
 
-@inproceedings{manski99,
+@inproceedings{Manski99,
   author =	 {Charles F. Manski},
   title =	 {Nonlinear Statistical Inference: Essays in Honor of
                   Takeshi Amemiya},
@@ -24393,4 +24393,35 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2011},
   volume = {42},
   issue = {7}
+}
+
+@article{LanImb96,
+  title =        {Case-control studies with contaminated controls},
+  author =       {Lancaster, Tony and Imbens, Guido},
+  journal =      {Journal of Econometrics},
+  volume =       {71},
+  number =       {1},
+  pages =        {145--160},
+  year =         {1996}
+}
+@article{WanRudR14,
+  author    = {Fulton Wang and
+               Cynthia Rudin},
+  title     = {Falling Rule Lists},
+  journal   = {CoRR},
+  volume    = {abs/1411.5899},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1411.5899},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/WangR14}
+}
+@article{LetRudMcC15,
+  title =        {Interpretable classifiers using rules and Bayesian
+                  analysis: Building a better stroke prediction model},
+  author =       {Letham, Benjamin and Rudin, Cynthia and McCormick,
+                  Tyler H and Madigan, David and others},
+  journal =      {The Annals of Applied Statistics},
+  volume =       {9},
+  number =       {3},
+  pages =        {1350--1371},
+  year =         {2015}
 }
