--- a/gk.bib
+++ b/gk.bib
@@ -24425,3 +24425,10 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {1350--1371},
   year =         {2015}
 }
+@article{Miller16,
+  title =        {Automatic Detection of Comment Propaganda in Chinese
+                  Media},
+  author =       {Miller, Blake Andrew Phillip},
+  journal =      {Available at SSRN 2738325},
+  year =         2016
+}
