authoritarian regime information problem citations

--- a/gk.bib
+++ b/gk.bib
@@ -24432,3 +24432,85 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   journal =      {Available at SSRN 2738325},
   year =         2016
 }
+
+@BOOK{Wintrobe98, 
+        author = "Ronald Wintrobe",
+        title = "The Political Economy of Dictatorship",
+        year = "1998",
+        publisher = "Cambridge University Press",
+        location = "New York",
+}
+
+@article{Kuran91,
+  title={Now out of never: The element of surprise in the East European revolution of 1989},
+  author={Timur Kuran},
+  journal={World politics},
+  volume={44},
+  number={1},
+  pages={7-48},
+  year={1991}
+}
+
+@article{HolRosVre14,
+  title={Measuring transparency},
+  author={Hollyer, {James R.} and Rosendorff, {B. Peter} and Vreeland, {James R.}},
+  journal={Political analysis},
+  volume={22},
+  number={4},
+  pages={413-434},
+  year={2014},
+}
+
+@book{Chwe2013,
+  title={Rational ritual: Culture, coordination, and common knowledge},
+  author={Chwe, {Michael Suk-Young}},
+  year={2013},
+  publisher={Princeton University Press}
+}
+
+@book{Tilly1978,
+  title={From mobilization to revolution},
+  author={Tilly, Charles},
+  year={1978},
+  publisher={McGraw-Hill New York}
+}
+
+@article{PerTab06,
+  title={Democracy and development: The devil in the details},
+  author={Persson, Torsten and Guido Tabellini},
+  journal={American Economic Review},
+  volume={96},
+  pages={319-324},
+  year={2006},
+}
+
+@article{Dimitrov14a,
+  title={What the Party Wanted to Know Citizen Complaints as a “Barometer of Public Opinion” in Communist Bulgaria},
+  author={Dimitrov, Martin K},
+  journal={East European Politics \& Societies},
+  volume={28},
+  number={2},
+  pages={271--295},
+  year={2014}
+}
+
+@article{Dimitrov14c,
+  title={Tracking Public Opinion Under Authoritarianism},
+  author={Dimitrov, Martin K},
+  journal={russian history},
+  volume={41},
+  number={3},
+  pages={329--353},
+  year={2014}
+}
+
+@article{Dimitrov14c,
+  title={Internal Government Assessments of the Quality of Governance in China},
+  author={Dimitrov, Martin K},
+  journal={Studies in Comparative International Development},
+  pages={1--23},
+  year={2014}
+}
+
+
+%END
