--- a/gk.bib
+++ b/gk.bib
@@ -24505,12 +24505,23 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @article{Dimitrov14c,
-  title={Internal Government Assessments of the Quality of Governance in China},
-  author={Dimitrov, Martin K},
-  journal={Studies in Comparative International Development},
-  pages={1--23},
-  year={2014}
+  title =        {Internal Government Assessments of the Quality of
+                  Governance in China},
+  author =       {Dimitrov, Martin K},
+  journal =      {Studies in Comparative International Development},
+  pages =        {1--23},
+  year =         {2014}
 }
 
+@InCollection{Shepsle85,
+  author =       {Kenneth A. Shepsle},
+  title =        {Comment of Why the Regulators Chose to Deregulate},
+  booktitle =    {Regulatory Policy and the Social Sciences},
+  publisher =    {University of California Press},
+  year =         1985,
+  editor =       {Roger Noll},
+  pages =        {231--239},
+  address =      {Berkeley}
+}
 
 %END
