--- a/gk.bib
+++ b/gk.bib
@@ -24494,7 +24494,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2014}
 }
 
-@article{Dimitrov14c,
+@article{Dimitrov14b,
   title={Tracking Public Opinion Under Authoritarianism},
   author={Dimitrov, Martin K},
   journal={russian history},
