cite for 50c paper

--- a/gk.bib
+++ b/gk.bib
@@ -24524,4 +24524,9 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   address =      {Berkeley}
 }
 
-%END
+@inproceedings{YanYanWil15,
+  title={Penny for Your Thoughts: Searching for the 50 Cent Party on Sina Weibo},
+  author={Yang, Xiaofeng and Yang, Qian and Wilson, Christo},
+  booktitle={Ninth International AAAI Conference on Web and Social Media},
+  year={2015}
+}
