--- a/gk.bib
+++ b/gk.bib
@@ -24530,3 +24530,14 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   booktitle={Ninth International AAAI Conference on Web and Social Media},
   year={2015}
 }
+@article{ZhaWuZha14,
+  title =        {A short-term trend prediction model of topic over
+                  Sina Weibo dataset},
+  author =       {Zhao, Juanjuan and Wu, Weili and Zhang, Xiaolong and
+                  Qiang, Yan and Liu, Tao and Wu, Lidong},
+  journal =      {Journal of Combinatorial Optimization},
+  volume =       {28},
+  number =       {3},
+  pages =        {613--625},
+  year =         {2014}
+}
