--- a/gk.bib
+++ b/gk.bib
@@ -24541,3 +24541,14 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {613--625},
   year =         {2014}
 }
+@article{Bushman02,
+  title =        {Does venting anger feed or extinguish the flame?
+                  Catharsis, rumination, distraction, anger, and
+                  aggressive responding},
+  author =       {Bushman, Brad J},
+  journal =      {Personality and social psychology bulletin},
+  volume =       {28},
+  number =       {6},
+  pages =        {724--731},
+  year =         {2002}
+}
