--- a/gk.bib
+++ b/gk.bib
@@ -24552,3 +24552,14 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {724--731},
   year =         {2002}
 }
+
+@article{DorLanPal14,
+  title={Separating the Wheat from the Chaff: Applications of Automated Document Classification Using Support Vector Machines},
+  author={D’Orazio, Vito and Landis, Steven T and Palmer, Glenn and Schrodt, Philip},
+  journal={Political analysis},
+  volume={22},
+  number={2},
+  pages={224--242},
+  year={2014},
+  publisher={Oxford University Press}
+}
