--- a/gk.bib
+++ b/gk.bib
@@ -24554,12 +24554,22 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @article{DorLanPal14,
-  title={Separating the Wheat from the Chaff: Applications of Automated Document Classification Using Support Vector Machines},
-  author={D’Orazio, Vito and Landis, Steven T and Palmer, Glenn and Schrodt, Philip},
-  journal={Political analysis},
-  volume={22},
-  number={2},
-  pages={224--242},
-  year={2014},
-  publisher={Oxford University Press}
+  title =        {Separating the Wheat from the Chaff: Applications of
+                  Automated Document Classification Using Support
+                  Vector Machines},
+  author =       {D’Orazio, Vito and Landis, Steven T and Palmer,
+                  Glenn and Schrodt, Philip},
+  journal =      {Political analysis},
+  volume =       {22},
+  number =       {2},
+  pages =        {224--242},
+  year =         {2014}
+}
+
+@Misc{Pew14,
+  author =       {{Pew Research Center}},
+  title =        {Beyond Red vs. Blue: The Political Typology},
+  howpublished = {{http://j.mp/PewResponse}},
+  month =        {June},
+  year =         2014
 }
