--- a/gk.bib
+++ b/gk.bib
@@ -24573,3 +24573,14 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   month =        {June},
   year =         2014
 }
+@article{NahKru12,
+  title =        {Asking sensitive questions: the impact of forgiving
+                  wording and question context on social desirability
+                  bias},
+  author =       {N{\"a}her, Anatol-Fiete and Krumpal, Ivar},
+  journal =      {Quality \& Quantity},
+  volume =       {46},
+  number =       {5},
+  pages =        {1601--1616},
+  year =         {2012}
+}
