--- a/gk.bib
+++ b/gk.bib
@@ -24584,3 +24584,19 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {1601--1616},
   year =         {2012}
 }
+@book{GroFowCou11,
+  title =        {Survey methodology},
+  author =       {Groves, Robert M and Fowler Jr, Floyd J and Couper,
+                  Mick P and Lepkowski, James M and Singer, Eleanor
+                  and Tourangeau, Roger},
+  volume =       {561},
+  year =         {2011},
+  publisher =    {John Wiley \& Sons}
+}
+@book{TouConCou13,
+  title =        {The science of web surveys},
+  author =       {Tourangeau, Roger and Conrad, Frederick and Couper,
+                  Mick},
+  year =         {2013},
+  publisher =    {Oxford University Press}
+}
