--- a/gk.bib
+++ b/gk.bib
@@ -24600,3 +24600,25 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2013},
   publisher =    {Oxford University Press}
 }
+@article{DenMouGri12,
+  title =        {The effects of analytical rumination, reappraisal,
+                  and distraction on anger experience},
+  author =       {Denson, Thomas F and Moulds, Michelle L and Grisham,
+                  Jessica R},
+  journal =      {Behavior therapy},
+  volume =       {43},
+  number =       {2},
+  pages =        {355--364},
+  year =         {2012},
+  publisher =    {Elsevier}
+}
+@article{MerSpe11,
+  title={Why do humans reason? Arguments for an argumentative theory},
+  author={Mercier, Hugo and Sperber, Dan},
+  journal={Behavioral and brain sciences},
+  volume={34},
+  number={02},
+  pages={57--74},
+  year={2011},
+  publisher={Cambridge Univ Press}
+}
