--- a/gk.bib
+++ b/gk.bib
@@ -24622,3 +24622,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2011},
   publisher={Cambridge Univ Press}
 }
+
+@article{ChePanXu14,
+  title={Sources of Authoritarian Responsiveness: A Field Experiment in China},
+  author={Chen, Jidong and Pan, Jennifer and Xu, Yiqing},
+  year={2016},
+  volume = {60},
+  number = {2},
+  journal={American Journal of Political Science},
+  pages={383-400}
+}
