--- a/gk.bib
+++ b/gk.bib
@@ -24343,7 +24343,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   title =        {Manufacturing Consent in Cyberspace: China’s ``Fifty-Cent Army"},
   journal =      {Journal of Current Chinese Affairs},
   year =         2015,
-  volumne =      {44},
+  volume =      {44},
   number =       {2},
   pages =        {105--134}
 }
