--- a/gk.bib
+++ b/gk.bib
@@ -24653,3 +24653,38 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages={383-400}
 }
 
+@article{TanJorJen12,
+  title =        {Digital media and political attitudes in China},
+  author =       {Tang, Min and Jorba, Laia and Jensen, Michael J},
+  journal =      {Digital Media and Political Engagement Worldwide: A
+                  Comparative Study},
+  pages =        {221--239},
+  year =         {2012},
+  publisher =    {Cambridge University Press}
+}
+@article{Bambauer13,
+  title =        {Censorship v3. 1},
+  author =       {Bambauer, Derek E},
+  journal =      {Internet Computing, IEEE},
+  volume =       {17},
+  number =       {3},
+  pages =        {26--33},
+  year =         {2013},
+  publisher =    {IEEE}
+}
+@incollection{ZhaDiFHen14,
+  title={Social Networking on the World Wide Web},
+  author={Zhang, Qingpeng and DiFranzo, Dominic and Hendler, James A},
+  booktitle={Encyclopedia of Social Network Analysis and Mining},
+  pages={1879--1892},
+  year={2014},
+  publisher={Springer}
+}
+@PhdThesis{Smith16,
+  author =       {Evann Smith},
+  title =        {Mass Mobilization in the Middle East: Form
+                  Perception, and Language},
+  school =       {Harvard University},
+  year =         2016,
+  address =   {Cambridge MA}}
+
