--- a/gk.bib
+++ b/gk.bib
@@ -24686,5 +24686,27 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
                   Perception, and Language},
   school =       {Harvard University},
   year =         2016,
-  address =   {Cambridge MA}}
-
+  address =   {Cambridge MA}
+  }
+@article{AntZhaCon15,
+  title =        {Comparisons of Online Recruitment Strategies for
+                  Convenience Samples Craigslist, Google AdWords,
+                  Facebook, and Amazon Mechanical Turk},
+  author =       {Antoun, Christopher and Zhang, Chan and Conrad,
+                  Frederick G and Schober, Michael F},
+  journal =      {Field Methods},
+  pages =        {1--16},
+  year =         {2015}
+}
+@article{Nielsen11,
+  author    = {Finn {\AA}rup Nielsen},
+  title     = {A new {ANEW:} Evaluation of a word list for sentiment analysis in
+               microblogs},
+  journal   = {CoRR},
+  volume    = {abs/1103.2903},
+  year      = {2011},
+  url       = {http://arxiv.org/abs/1103.2903},
+  timestamp = {Mon, 05 Dec 2011 18:05:25 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1103-2903},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
