Added Xi speech

--- a/gk.bib
+++ b/gk.bib
@@ -24710,3 +24710,10 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1103-2903},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@misc{Xi2014,
+  author =	 {Xi, Jinping},
+  title =	 {Overall Plan Involving all Parties for Innovation and Development to Strive to Build Our Country into an Internet Power},
+  year =	 {Feb. 2014},
+  note =	 {{http://cpc.people.com.cn/n/2014/0228/c64094-24488180.html}}
+}
