Added cites for 50c paper

--- a/gk.bib
+++ b/gk.bib
@@ -24717,3 +24717,28 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =	 {Feb. 2014},
   note =	 {{http://cpc.people.com.cn/n/2014/0228/c64094-24488180.html}}
 }
+
+@article{StoGal11,
+  title={Remote control: How the media sustain authoritarian rule in China},
+  author={Stockmann, Daniela and Gallagher, {Mary E}},
+  journal={Comparative Political Studies},
+  volume = {44},
+  number = {4},
+  pages = {436--467},
+  year={2011},
+}
+
+@book{Stockmann13,
+  title={Media Commercialization and Authoritarian Rule in China},
+  author={Stockmann, Daniela},
+  year={2013},
+  location={Cambridge, UK},
+  publisher={Cambridge University Press}
+}
+
+@book{Brady09,
+  title={Marketing Dictatorship: Propaganda and Thought Work in Contemporary China},
+  author={Brady, Anne-Marie},
+  year={2009},
+  publisher={Rowman \& Littlefield Publishers}
+}
