--- a/gk.bib
+++ b/gk.bib
@@ -1,3 +1,4 @@
+
 % A bibtex file for papers by or coauthored with Gary King
 %
 % To add references, first please CHECK that your doesn't already
@@ -16770,17 +16771,6 @@ pages =	 {186-200}
   note =	 {{http://www.nber.org/papers/w13934}}
 }
 
-@article{Hall06,
-  author =	 {Peter A. Hall},
-  title =	 {Systematic Process Analysis: When and How to Use It},
-  journal =	 {European Management Review},
-  volume =	 {3},
-  year =	 {2006},
-  pages =	 {24--31},
-  month =	 {Spring},
-  number =	 {1}
-}
-
 @article{Converse87,
   title =	 {Changing Conceptions of Public Opinion in the
                   Political Process},
@@ -16950,7 +16940,7 @@ pages =	 {186-200}
   booktitle = 	 {The Future of Political Science: 100 Perspectives},
   pages =	 { },
   publisher =	 {Routledge},
-  year =	 {2009, forthcoming},
+  year =	 {2009},
   editor =	 {Gary King and Kay Scholzman and Norman Nie}
 }
 
@@ -24673,21 +24663,23 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   publisher =    {IEEE}
 }
 @incollection{ZhaDiFHen14,
-  title={Social Networking on the World Wide Web},
-  author={Zhang, Qingpeng and DiFranzo, Dominic and Hendler, James A},
-  booktitle={Encyclopedia of Social Network Analysis and Mining},
-  pages={1879--1892},
-  year={2014},
-  publisher={Springer}
+  title =        {Social Networking on the World Wide Web},
+  author =       {Zhang, Qingpeng and DiFranzo, Dominic and Hendler,
+                  James A},
+  booktitle =    {Encyclopedia of Social Network Analysis and Mining},
+  pages =        {1879--1892},
+  year =         {2014},
+  publisher =    {Springer}
 }
+
 @PhdThesis{Smith16,
   author =       {Evann Smith},
   title =        {Mass Mobilization in the Middle East: Form
                   Perception, and Language},
   school =       {Harvard University},
   year =         2016,
-  address =   {Cambridge MA}
-  }
+  address =      {Cambridge MA}
+}
 @article{AntZhaCon15,
   title =        {Comparisons of Online Recruitment Strategies for
                   Convenience Samples Craigslist, Google AdWords,
@@ -24699,21 +24691,35 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2015}
 }
 @article{Nielsen11,
-  author    = {Finn {\AA}rup Nielsen},
-  title     = {A new {ANEW:} Evaluation of a word list for sentiment analysis in
-               microblogs},
-  journal   = {CoRR},
-  volume    = {abs/1103.2903},
-  year      = {2011},
-  url       = {http://arxiv.org/abs/1103.2903},
-  timestamp = {Mon, 05 Dec 2011 18:05:25 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1103-2903},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  author =       {Finn {\AA}rup Nielsen},
+  title =        {A new {ANEW:} Evaluation of a word list for
+                  sentiment analysis in microblogs},
+  journal =      {CoRR},
+  volume =       {abs/1103.2903},
+  year =         {2011},
+  url =          {http://arxiv.org/abs/1103.2903},
+  timestamp =    {Mon, 05 Dec 2011 18:05:25 +0100},
+  biburl =
+                  {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1103-2903}
 }
 
 @misc{Xi2014,
-  author =	 {Xi, Jinping},
-  title =	 {Overall Plan Involving all Parties for Innovation and Development to Strive to Build Our Country into an Internet Power},
-  year =	 {Feb. 2014},
-  note =	 {{http://cpc.people.com.cn/n/2014/0228/c64094-24488180.html}}
+  author =       {Xi, Jinping},
+  title =        {Overall Plan Involving all Parties for Innovation
+                  and Development to Strive to Build Our Country into
+                  an Internet Power},
+  year =         {Feb. 2014},
+  note =
+                  {{http://cpc.people.com.cn/n/2014/0228/c64094-24488180.html}}
+}
+
+@article{Hall06,
+  author =	 {Peter A. Hall},
+  title =	 {Systematic Process Analysis: When and How to Use It},
+  journal =	 {European Management Review},
+  volume =	 {3},
+  year =	 {2006},
+  pages =	 {24--31},
+  month =	 {Spring},
+  number =	 {1}
 }
