progpol paper urls

--- a/gk.bib
+++ b/gk.bib
@@ -931,6 +931,7 @@ howpublished = {NBER}
   month =        {March},
   type =         {Research Report},
   address =      {2033 K Street, NW Washington, DC 20006}
+  url = {http://ebrary.ifpri.org/cdm/ref/collection/p15738coll2/id/125777}
 }
 
 @article{Bell97,
@@ -11656,6 +11657,7 @@ pages={706-719}
 	howpublished={International Food Policy Research Institute},
 	address={Washington},
 	author={E. Skoufias}
+	url = {http://www.eldis.org/vfile/upload/1/document/0708/DOC22746.pdf}
 }
 
 @unpublished{Small05,
@@ -24071,6 +24073,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
                   the evaluation of PROGRESA},
   Type =         {Final Report},
   Year =         {2000}
+  url = {http://ebrary.ifpri.org/cdm/ref/collection/p15738coll2/id/125430}
 }
 
 @incollection{Cornelius04,
@@ -24108,6 +24111,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
                   Evidence from an Urban Titling Program in Mexico},
   Type =         {Working Paper},
   Year =         {2015}
+  url       = {http://scholar.harvard.edu/files/jmarshall/files/jpe_manuscript.pdf}
 }
 @Article{BanArd72,
   author =       {P.P. Bansal and A.J. Ardell},
