tweak urls progpol paper cites

--- a/gk.bib
+++ b/gk.bib
@@ -930,8 +930,8 @@ howpublished = {NBER}
   year =         {1999},
   month =        {March},
   type =         {Research Report},
-  address =      {2033 K Street, NW Washington, DC 20006}
-  url = {http://ebrary.ifpri.org/cdm/ref/collection/p15738coll2/id/125777}
+  address =      {2033 K Street, NW Washington, DC 20006},
+  note = {\url{http://goo.gl/YLWz8x}}
 }
 
 @article{Bell97,
@@ -11656,8 +11656,8 @@ pages={706-719}
 	year={2005},
 	howpublished={International Food Policy Research Institute},
 	address={Washington},
-	author={E. Skoufias}
-	url = {http://www.eldis.org/vfile/upload/1/document/0708/DOC22746.pdf}
+	author={E. Skoufias},
+	note = {\url{http://goo.gl/ROJeRM}}
 }
 
 @unpublished{Small05,
@@ -24072,8 +24072,8 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   Title =        {The application of social cost--benefit analysis to
                   the evaluation of PROGRESA},
   Type =         {Final Report},
-  Year =         {2000}
-  url = {http://ebrary.ifpri.org/cdm/ref/collection/p15738coll2/id/125430}
+  Year =         {2000},
+  note = {\url{http://goo.gl/gPYG8N}}
 }
 
 @incollection{Cornelius04,
@@ -24099,7 +24099,8 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   Title =        {Do employment programs buy votes? A field experiment
                   in Uganda},
   Type =         {Working Paper},
-  Year =         {2016}
+  Year =         {2016},
+  note = {\url{http://chrisblattman.com/research}}
 }
 
 @techreport{LarMarTru15,
@@ -24110,8 +24111,8 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   Title =        {Breaking Clientelism or Rewarding Incumbents?
                   Evidence from an Urban Titling Program in Mexico},
   Type =         {Working Paper},
-  Year =         {2015}
-  url       = {http://scholar.harvard.edu/files/jmarshall/files/jpe_manuscript.pdf}
+  Year =         {2015},
+  note       = {\url{http://goo.gl/P4YXky}}
 }
 @Article{BanArd72,
   author =       {P.P. Bansal and A.J. Ardell},
