--- a/gk.bib
+++ b/gk.bib
@@ -1,14 +1,12 @@
-
 % A bibtex file for papers by or coauthored with Gary King
 %
-% To add references, first please CHECK that your doesn't already
-%      exist in this file and
-%      then add entries only at the end.
+% To add references, first please CHECK that it doesn't already
+%      exist in this file and then add entries only at the end.
 %
 % Use these rules for the reference label:
 %
 % -if one author: use last name and last 2 digits of the year: Tobler79.
-% -if multiple authors, use 1st 3 letters of each of UP TO the first three
+% -if multiple authors, use first 3 letters of each of UP TO the first three
 %     authors and the last 2 digits of the year:  KinTomWit00.
 % -if necessary add lower-case letters for multiple entries in a year:  King02, King02b
 %     (the first one should NOT have an 'a' afterwards)
@@ -16,7 +14,7 @@
 % -feel free to use the abbreviations at the start, or add to them.
 % -Use authors full names when known.
 %
-% please be sure to commit changes to CVS regularly as a number of
+% please be sure to commit changes regularly as a number of
 % people are all using this at the same time.
 
 @STRING{ prq = "Political Research Quarterly"}
@@ -20892,13 +20890,17 @@ journal = {Science}
   pages = {42--101}
 }
 
-@misc{Lorentzen10,
-  author =	 {Peter Lorentzen},
-  title =	 {Regularizing Rioting: Permitting Protest in an 
-                  Authoritarian Regime},
-  year =	 2010,
-  howpublished = {Working Paper}
+@article{Lorentzen13,
+  title =        {Regularizing rioting: Permitting public protest in
+                  an authoritarian regime},
+  author =       {Lorentzen, Peter L},
+  journal =      {Quarterly Journal of Political Science},
+  volume =       {8},
+  number =       {2},
+  pages =        {127--158},
+  year =         {2013}
 }
+
 
 @article{MacKinnon09, 
   author = {Rebecca MacKinnon},
@@ -24748,3 +24750,11 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2009},
   publisher={Rowman \& Littlefield Publishers}
 }
+@Misc{Wade16,
+  author =    {Wade, Samuel},
+  title =     {Who Does Global Times Speak For?},
+  howpublished = {China Digital Times},
+  month =     {23 August},
+  year =      2016,
+  note =      {{http://j.mp/GT-CCP}}}
+
