--- a/gk.bib
+++ b/gk.bib
@@ -24763,3 +24763,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =      2016,
   note =      {{http://j.mp/GT-CCP}}}
 
+@article{ZhuGol09,
+  title =        {Introduction to semi-supervised learning},
+  author =       {Zhu, Xiaojin and Goldberg, Andrew B},
+  journal =      {Synthesis lectures on artificial intelligence and
+                  machine learning},
+  volume =       {3},
+  number =       {1},
+  pages =        {1--130},
+  year =         {2009}
+}
