--- a/gk.bib
+++ b/gk.bib
@@ -24773,3 +24773,27 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {1--130},
   year =         {2009}
 }
+
+@misc{Ng15,
+  title={Politics, Rumors, and Ambiguity: Tracking Censorship on WeChat’s Public Accounts Platform},
+  author={Ng, {Jason Q.}},
+  year={2015},
+  publisher={mimeo, University of Toronto}
+}
+
+@inproceedings{KnoCreNg15,
+  title={Every Rose Has Its Thorn: Censorship and Surveillance on Social Video Platforms in China},
+  author={Knockel, Jeffrey and Crete-Nishihata, Masashi and Ng, {Jason Q.} and Senft, Adam and Crandall, {Jedidiah R.}},
+  booktitle={5th USENIX Workshop on Free and Open Communications on the Internet (FOCI 15)},
+  year={2015}
+}
+
+@article{CaiCar16,
+  title={Real-world Islands in a Social Media Sea: Nationalism and Censorship on Weibo during the 2012 Diaoyu/Senkaku Crisis},
+  author={Cairns, Christopher and Carlson, Allen},
+  journal={The China Quarterly},
+  volume={225},
+  pages={23--49},
+  year={2016},
+  publisher={Cambridge Univ Press}
+}
