--- a/gk.bib
+++ b/gk.bib
@@ -24797,3 +24797,17 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2016},
   publisher={Cambridge Univ Press}
 }
+
+@phdthesis{Pan15,
+  author = {Jennifer Pan},
+  title = {Buying Inertia: Preempting Social Disorder with Selective Welfare Provision in Urban China},
+  school = {Harvard University},
+  year = {2015}
+}
+
+@misc{Truex16,
+  title={Focal Points, Dissident Calendars, and Preemptive Repression},
+  author={Truex, Rory,},
+  year={2016},
+  publisher={http://dx.doi.org/10.2139/ssrn.2802859}
+}
