--- a/gk.bib
+++ b/gk.bib
@@ -24807,7 +24807,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 
 @misc{Truex16,
   title={Focal Points, Dissident Calendars, and Preemptive Repression},
-  author={Truex, Rory,},
+  author={Truex, Rory},
   year={2016},
   publisher={http://dx.doi.org/10.2139/ssrn.2802859}
 }
