add Rongbin Han 2

--- a/gk.bib
+++ b/gk.bib
@@ -24811,3 +24811,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2016},
   publisher={http://dx.doi.org/10.2139/ssrn.2802859}
 }
+
+@article{Han15b,
+  title={Defending the authoritarian regime online: china's “voluntary fifty-cent army”},
+  author={Han, Rongbin},
+  journal={The China Quarterly},
+  volume={224},
+  pages={1006--1025},
+  year={2015},
+  publisher={Cambridge Univ Press}
+}
