--- a/gk.bib
+++ b/gk.bib
@@ -24821,3 +24821,12 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2015},
   publisher={Cambridge Univ Press}
 }
+
+@incollection{wasserstrom2016oxford,                                                               
+  title={The Presence of the Past: A Coda},                                                        
+  author={Ian Johnson},                                                                            
+  booktitle={The Oxford Illustrated History of Modern China},                                      
+  editor={Wasserstrom, Jeffrey N},                                                                 
+  year={2016},                                                                                     
+  publisher={Oxford University Press}                                                              
+}      
