--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2455,20 +2455,12 @@ pages={1037--1060},
   note =         {http://j.mp/1KbwkJJ},
   author =       {Gary King and Jennifer Pan and Margaret E. Roberts}
 }
-. 2016. “Computer-Assisted Keyword and Document Set Discovery from Unstructured Text”. Copy at http://j.mp/1qdVqhx
 
 @Article{KinLamRob16,
-  author =       {Gary King and Patrick Lam and Margaret Roberts},
-  title =        {Computer-Assisted Keyword and Document Set Discovery
-                  from Unstructured Text},
+  author =       {Gary King and Patrick Lam and Margaret E. Roberts},
+  title =        {Replication Data for: Computer-Assisted Keyword and
+                  Document Set Discovery from Unstructured Text},
   journal =      { },
-  year =         {2016},
-  OPTkey =       {},
-  OPTvolume =    {},
-  OPTnumber =    {},
-  OPTpages =     {},
-  OPTmonth =     {},
-  OPTnote =      {},
-  OPTannote =    {}
-}
-
+  year =         2016,
+  note =      {\underline{doi:10.7910/DVN/FMJDCD} Harvard Dataverse,
+                  [UNF:6:56ELwemliNH+ALideeeh3Q==]}}
